[package]
name = "oyez_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#http = "1.1.0" # cargo search http; cargo add http;
reqwest = "0.12.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"