[package]
name = "oyez_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
#http = "1.1.0" # cargo search http; cargo add http;
reqwest = {version = "0.12.2", features = ["blocking"]}
serde_json = "1.0"
